syntax = "proto3";

package vehicle;

message FindVehicleConditions {
  string brand = 1;
}

message FindOneVehicleConditions {
  int32 id = 1;
}

enum VehicleType {
  VEHICLE_TYPE_UNSPECIFIED = 0;
  VEHICLE_TYPE_SUV = 1;
  VEHICLE_TYPE_MINIVAN = 2;
  VEHICLE_TYPE_COUPE = 3;
  VEHICLE_TYPE_SEDAN = 4;
  VEHICLE_TYPE_PICKUP = 5;
  VEHICLE_TYPE_TRUNK = 6;
  VEHICLE_TYPE_VAN = 7;
  VEHICLE_TYPE_LIMOUSINE = 8;
}

message Vehicles {
  repeated Vehicle vehicles = 1;
}

message Vehicle {
  int32 id = 1;
  string name = 2;
  string brand = 3;
  VehicleType type = 4;
}
